// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a message 1`] = `
<View
  onLongPress={undefined}
  onPress={undefined}
  style={
    Object {
      "backgroundColor": "#aaaaaa",
    }
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "marginLeft": 10,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {},
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                Object {
                  "color": "#43484d",
                  "fontSize": 17.5,
                },
                Object {
                  "marginLeft": 10,
                },
                undefined,
                undefined,
              ],
            ]
          }
        >
          foo
        </Text>
      </View>
      <View
        style={undefined}
      >
        <View />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 0.15,
          "justifyContent": "center",
        }
      }
    >
      <View
        onPress={undefined}
        style={
          Array [
            false,
            false,
            false,
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        underlayColor="white"
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#bdc6cf",
                "fontSize": 28,
              },
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
              ],
              Object {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders a message 2`] = `
<View
  onLongPress={undefined}
  onPress={undefined}
  style={
    Object {
      "backgroundColor": "#111111",
    }
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "marginLeft": 10,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {},
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                Object {
                  "color": "#43484d",
                  "fontSize": 17.5,
                },
                Object {
                  "marginLeft": 10,
                },
                undefined,
                undefined,
              ],
            ]
          }
        >
          foo
        </Text>
      </View>
      <View
        style={undefined}
      >
        <View />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 0.15,
          "justifyContent": "center",
        }
      }
    >
      <View
        onPress={undefined}
        style={
          Array [
            false,
            false,
            false,
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        underlayColor="white"
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#bdc6cf",
                "fontSize": 28,
              },
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
              ],
              Object {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders rows 1`] = `
Array [
  <View
    onLongPress={undefined}
    onPress={undefined}
    style={
        Object {
            "backgroundColor": "#aaaaaa",
          }
    }
    underlayColor="white"
>
    <View
        style={
            Array [
                Object {
                  "flexDirection": "row",
                  "marginLeft": 10,
                },
                undefined,
              ]
        }
    >
        <View
            style={
                Object {
                    "flex": 1,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                style={undefined}
            >
                <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {},
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            Array [
                              Object {
                                "color": "#43484d",
                                "fontSize": 17.5,
                              },
                              Object {
                                "marginLeft": 10,
                              },
                              undefined,
                              undefined,
                            ],
                          ]
                    }
                >
                    bar
                </Text>
            </View>
            <View
                style={undefined}
            >
                <View />
            </View>
        </View>
        <View
            style={
                Object {
                    "alignItems": "flex-end",
                    "flex": 0.15,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                onPress={undefined}
                style={
                    Array [
                        false,
                        false,
                        false,
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                }
                underlayColor="white"
            >
                <Text
                    accessible={true}
                    allowFontScaling={false}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {
                              "color": "#bdc6cf",
                              "fontSize": 28,
                            },
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                              },
                              undefined,
                            ],
                            Object {
                              "fontFamily": "Material Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                          ]
                    }
                >
                    
                </Text>
            </View>
        </View>
    </View>
</View>,
  <View
    onLongPress={undefined}
    onPress={undefined}
    style={
        Object {
            "backgroundColor": "#111111",
          }
    }
    underlayColor="white"
>
    <View
        style={
            Array [
                Object {
                  "flexDirection": "row",
                  "marginLeft": 10,
                },
                undefined,
              ]
        }
    >
        <View
            style={
                Object {
                    "flex": 1,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                style={undefined}
            >
                <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {},
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            undefined,
                            Array [
                              Object {
                                "color": "#43484d",
                                "fontSize": 17.5,
                              },
                              Object {
                                "marginLeft": 10,
                              },
                              undefined,
                              undefined,
                            ],
                          ]
                    }
                >
                    foo
                </Text>
            </View>
            <View
                style={undefined}
            >
                <View />
            </View>
        </View>
        <View
            style={
                Object {
                    "alignItems": "flex-end",
                    "flex": 0.15,
                    "justifyContent": "center",
                  }
            }
        >
            <View
                onPress={undefined}
                style={
                    Array [
                        false,
                        false,
                        false,
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                }
                underlayColor="white"
            >
                <Text
                    accessible={true}
                    allowFontScaling={false}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                        Array [
                            Object {
                              "color": "#bdc6cf",
                              "fontSize": 28,
                            },
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                              },
                              undefined,
                            ],
                            Object {
                              "fontFamily": "Material Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                          ]
                    }
                >
                    
                </Text>
            </View>
        </View>
    </View>
</View>,
]
`;
